--- a/client/html/elders.html
+++ b/client/html/elders.html
@@ -1,10 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="app">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/custom.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
 </head>
-<body>
+<body ng-controller="ctrl">
+<div class="fluid-container">
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+            <h1>Elders</h1>
+            <table class="table table-striped">
+                <thead>
+                <tr>
+                    <th>name</th>
+                    <th>location</th>
+                    <th></th>
+                    <th></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr ng-repeat="elder in elders track by $index">
+                    <td>{{elder.name}}</td>
+                    <td>{{elder.location}}</td>
+                    <td><button type="button" class="btn btn-warning" ng-click="update()">Save</button></td>
+                    <td><button type="button" class="btn btn-danger" ng-click="delete($index)">Delete</button></td>
+                </tr>
+                <tr>
+                    <td><input type="text" class="form-control" ng-model="name"></td>
+                    <td><input type="text" class="form-control" ng-model="location"></td>
+                    <td><button type="button" class="btn btn-primary" ng-click="post()">Add</button></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<script src="../js/elderctrl.js"></script>
 </body>
 </html>
