--- a/client/html/elders.html
+++ b/client/html/elders.html
@@ -11,9 +11,9 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <ul class="nav navbar-nav">
-          <li><a href="/">elders</a></li>
-          <li><a href="requests">requests</a></li>
-          <li><a href="volunteers">volunteers</a></li>
+          <li><a href="/elders">elders</a></li>
+          <li><a href="/requests">requests</a></li>
+          <li><a href="/volunteers">volunteers</a></li>
         </ul>
       </div>
     </nav>
