--- a/client/html/requests.html
+++ b/client/html/requests.html
@@ -11,16 +11,16 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <ul class="nav navbar-nav">
-          <li><a href="/">elders</a></li>
-          <li><a href="requests">requests</a></li>
-          <li><a href="volunteers">volunteers</a></li>
+          <li><a href="/elders">elders</a></li>
+          <li><a href="/requests">requests</a></li>
+          <li><a href="/volunteers">volunteers</a></li>
         </ul>
       </div>
     </nav>
     <div class="fluid-container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
-          <h1>Transport</h1>
+          <h1>Requests</h1>
           <table class="table table-striped">
             <thead>
               <tr>
