--- a/client/html/volunteers.html
+++ b/client/html/volunteers.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="app">
   <head>
     <title>volunteers</title>
     <link rel="shortcut icon" type="image/png" href="/calendar.png">
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/custom.css">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
   </head>
-  <body>
+  <body ng-controller="ctrl">
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <ul class="nav navbar-nav">
