--- a/client/html/requests.html
+++ b/client/html/requests.html
@@ -35,10 +35,10 @@
             <tbody>
               <tr ng-repeat="request in requests track by $index">
                 <td>
-                  <input type="text" ng-model="request.elderid" class="form-control">
+                  <input type="text" ng-model="elders[request.elderid].name" class="form-control">
                 </td>
                 <td>
-                  <input type="text" ng-model="request.volunteerid" class="form-control">
+                  <input type="text" ng-model="volunteers[request.volunteerid].name" class="form-control">
                 </td>
                 <td>
                   <input type="text" ng-model="request.time" class="form-control">
@@ -55,19 +55,19 @@
               </tr>
               <tr>
                 <td>
-                  <input type="text" class="form-control">
+                  <input type="text" ng-model="elderid" id="elderid" class="form-control">
                 </td>
                 <td>
-                  <input type="text" class="form-control">
+                  <input type="text" ng-model="volunteerid" id="volunteerid" class="form-control">
                 </td>
                 <td>
-                  <input type="text" class="form-control">
+                  <input type="text" ng-model="time" class="form-control">
                 </td>
                 <td>
-                  <input type="text" class="form-control">
+                  <input type="text" ng-model="location" class="form-control">
                 </td>
                 <td>
-                  <button type="button" class="btn btn-primary">Add</button>
+                  <button type="button" ng-click="post()" class="btn btn-primary">Add</button>
                 </td>
               </tr>
             </tbody>
@@ -78,5 +78,7 @@
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/typeahead.js/0.11.1/typeahead.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.min.js"></script>
   <script src="../js/requestctrl.js"></script>
 </html>
