fixed bug with shared model requests is now fully crud and the add section has working widgets
only the update section doesnt have widgets is gonna require some fancy angular to get that done

--- a/client/html/volunteers.html
+++ b/client/html/volunteers.html
@@ -6,14 +6,15 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/custom.css">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
+    <link rel="stylesheet" href="../css/bootstrap-datetimepicker.min.css">
   </head>
   <body ng-controller="ctrl">
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <ul class="nav navbar-nav">
           <li><a href="/elders">elders</a></li>
-          <li><a href="/requests">requests</a></li>
           <li><a href="/volunteers">volunteers</a></li>
+          <li><a href="/requests">requests</a></li>
         </ul>
       </div>
     </nav>
@@ -57,7 +58,8 @@
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/typeahead.js/0.11.1/typeahead.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-3-typeahead/4.0.1/bootstrap3-typeahead.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.min.js"></script>
+  <script src="../lib/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/volunteerctrl.js"></script>
 </html>
