--- a/client/html/requests.html
+++ b/client/html/requests.html
@@ -6,18 +6,19 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/custom.css">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
+    <link rel="stylesheet" href="../css/bootstrap-datetimepicker.min.css">
   </head>
   <body ng-controller="ctrl">
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <ul class="nav navbar-nav">
           <li><a href="/elders">elders</a></li>
-          <li><a href="/requests">requests</a></li>
           <li><a href="/volunteers">volunteers</a></li>
+          <li><a href="/requests">requests</a></li>
         </ul>
       </div>
     </nav>
-    <div class="fluid-container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
           <h1>Requests</h1>
@@ -35,10 +36,10 @@
             <tbody>
               <tr ng-repeat="request in requests track by $index">
                 <td>
-                  <input type="text" ng-model="elders[request.elderid].name" class="form-control">
+                  <input type="text" ng-model="elders[$index]" class="form-control">
                 </td>
                 <td>
-                  <input type="text" ng-model="volunteers[request.volunteerid].name" class="form-control">
+                  <input type="text" ng-model="volunteers[$index]" class="form-control">
                 </td>
                 <td>
                   <input type="text" ng-model="request.time" class="form-control">
@@ -61,7 +62,7 @@
                   <input type="text" ng-model="volunteerid" id="volunteerid" class="form-control">
                 </td>
                 <td>
-                  <input type="text" ng-model="time" class="form-control">
+                  <input type="text" ng-model="time" id="inpTime" class="form-control">
                 </td>
                 <td>
                   <input type="text" ng-model="location" class="form-control">
@@ -78,7 +79,8 @@
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/typeahead.js/0.11.1/typeahead.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-3-typeahead/4.0.1/bootstrap3-typeahead.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.min.js"></script>
+  <script src="../lib/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/requestctrl.js"></script>
 </html>
