added extra fields and added widgets but need to find out about some details prio 1 is refactoring  deciding about expanding api  and implementing the new database

--- a/client/html/elders.html
+++ b/client/html/elders.html
@@ -27,8 +27,12 @@
               <tr>
                 <th>name</th>
                 <th>location</th>
-                <th></th>
-                <th></th>
+                <th>postcode</th>
+                <th>city</th>
+                <th>telephone</th>
+                <th>mobile</th>
+                <th>note</th>
+                <th>movement_aid</th>
               </tr>
             </thead>
             <tbody>
@@ -67,6 +71,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-3-typeahead/4.0.1/bootstrap3-typeahead.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.3.2/ui-bootstrap-tpls.min.js"></script>
   <script src="../lib/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/elderctrl.js"></script>
 </html>
