--- a/client/html/volunteers.html
+++ b/client/html/volunteers.html
@@ -26,8 +26,13 @@
             <thead>
               <tr>
                 <th>name</th>
-                <th></th>
-                <th></th>
+                <th>mon</th>
+                <th>tue</th>
+                <th>wed</th>
+                <th>thu</th>
+                <th>fri</th>
+                <th>sat</th>
+                <th>sun</th>
               </tr>
             </thead>
             <tbody>
@@ -60,6 +65,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-3-typeahead/4.0.1/bootstrap3-typeahead.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.3.2/ui-bootstrap-tpls.min.js"></script>
   <script src="../lib/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/volunteerctrl.js"></script>
 </html>
