--- a/client/html/volunteers.html
+++ b/client/html/volunteers.html
@@ -5,16 +5,15 @@
     <link rel="shortcut icon" type="image/png" href="/calendar.png">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/custom.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
     <link rel="stylesheet" href="../css/bootstrap-datetimepicker.min.css">
   </head>
   <body ng-controller="ctrl">
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <ul class="nav navbar-nav">
+          <li><a href="/requests">requests</a></li>
           <li><a href="/elders">elders</a></li>
           <li><a href="/volunteers">volunteers</a></li>
-          <li><a href="/requests">requests</a></li>
         </ul>
       </div>
     </nav>
@@ -26,19 +25,26 @@
             <thead>
               <tr>
                 <th>name</th>
-                <th>mon</th>
-                <th>tue</th>
-                <th>wed</th>
-                <th>thu</th>
-                <th>fri</th>
-                <th>sat</th>
-                <th>sun</th>
+                <th>schedule</th>
+                <th></th>
+                <th></th>
               </tr>
             </thead>
             <tbody>
               <tr ng-repeat="volunteer in volunteers track by $index">
                 <td>
-                  <input type="text" ng-model="volunteers[$index].name" class="form-control">
+                  <input type="text" ng-model="volunteers[$index].volunteerName" class="form-control">
+                </td>
+                <td>
+                  <div class="btn-group">
+                    <button uib-btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0" ng-model="volunteers[$index].mon" class="btn btn-default">mon</button>
+                    <button uib-btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0" ng-model="volunteers[$index].tue" class="btn btn-default">tue</button>
+                    <button uib-btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0" ng-model="volunteers[$index].wed" class="btn btn-default">wed</button>
+                    <button uib-btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0" ng-model="volunteers[$index].thu" class="btn btn-default">thu</button>
+                    <button uib-btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0" ng-model="volunteers[$index].fri" class="btn btn-default">fri</button>
+                    <button uib-btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0" ng-model="volunteers[$index].sat" class="btn btn-default">sat</button>
+                    <button uib-btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0" ng-model="volunteers[$index].sun" class="btn btn-default">sun</button>
+                  </div>
                 </td>
                 <td>
                   <button type="button" ng-click="update($index)" class="btn btn-warning">Save</button>
@@ -49,11 +55,23 @@
               </tr>
               <tr>
                 <td>
-                  <input type="text" ng-model="name" class="form-control">
+                  <input type="text" ng-model="volunteerName" class="form-control">
+                </td>
+                <td>
+                  <div class="btn-group">
+                    <button uib-btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0" ng-model="mon" class="btn btn-default">mon</button>
+                    <button uib-btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0" ng-model="tue" class="btn btn-default">tue</button>
+                    <button uib-btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0" ng-model="wed" class="btn btn-default">wed</button>
+                    <button uib-btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0" ng-model="thu" class="btn btn-default">thu</button>
+                    <button uib-btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0" ng-model="fri" class="btn btn-default">fri</button>
+                    <button uib-btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0" ng-model="sat" class="btn btn-default">sat</button>
+                    <button uib-btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0" ng-model="sun" class="btn btn-default">sun</button>
+                  </div>
                 </td>
                 <td>
                   <button type="button" ng-click="post()" class="btn btn-primary">Add</button>
                 </td>
+                <td></td>
               </tr>
             </tbody>
           </table>
@@ -63,9 +81,13 @@
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-3-typeahead/4.0.1/bootstrap3-typeahead.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.3.2/ui-bootstrap-tpls.min.js"></script>
+  <!--widgets-->
   <script src="../lib/bootstrap-datetimepicker.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-3-typeahead/4.0.1/bootstrap3-typeahead.min.js" type="text/javascript"></script>
+  <!--angular and modules-->
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.3.2/ui-bootstrap-tpls.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-strap/2.3.8/angular-strap.min.js"></script>
   <script src="../js/volunteerctrl.js"></script>
 </html>
