changed names and removed old code

--- a/client/html/requests.html
+++ b/client/html/requests.html
@@ -71,10 +71,10 @@
               </tr>
               <tr>
                 <td>
-                  <typeahead source="uniqueElders" ng-model="elderid"></typeahead>
+                  <typeahead source="uniqueElders" ng-model="elderName"></typeahead>
                 </td>
                 <td>
-                  <typeahead source="uniqueVolunteers" ng-model="volunteerid"></typeahead>
+                  <typeahead source="uniqueVolunteers" ng-model="volunteerName"></typeahead>
                 </td>
                 <td>
                   <datetimepicker model="time"></datetimepicker>
