--- a/client/html/requests.html
+++ b/client/html/requests.html
@@ -70,10 +70,11 @@
                   <input type="text" ng-model="request.note" class="form-control">
                 </td>
                 <td>
-                  <button type="button" ng-click="update($index)" class="btn btn-warning">Save</button>
+                  <!--pass object in parameter instead of index-->
+                  <button type="button" ng-click="update(request)" class="btn btn-warning">Save</button>
                 </td>
                 <td>
-                  <button type="button" ng-click="delete($index)" class="btn btn-danger">Delete</button>
+                  <button type="button" ng-click="delete(request)" class="btn btn-danger">Delete</button>
                 </td>
               </tr>
               <tr>
